src/fay_compiler_parser.output
Terminals unused in grammar

   OP1
   OP2
   OP3
   FLOATING
   LT_EQ
   EQ
   NOT_EQ
   OR
   AND
   '<'
   '&'
   '^'
   '|'


Grammar

    0 $accept: fay $end

    1 fay: Stmt
    2    | fay Stmt

    3 Expr0: ID
    4      | INTEGER
    5      | STRING
    6      | Call

    7 Expr1: Expr0
    8      | '[' Expr ']'
    9      | '(' Expr ')'

   10 Expr2: Expr1
   11      | Expr1 SUB_SUB
   12      | SUB_SUB Expr1
   13      | Expr1 ADD_ADD
   14      | ADD_ADD Expr1
   15      | '-' Expr2
   16      | '!' Expr2
   17      | '~' Expr2

   18 Expr3: Expr2
   19      | Expr3 '/' Expr2
   20      | Expr3 '%' Expr2
   21      | Expr3 '*' Expr2

   22 Expr4: Expr3
   23      | Expr4 '+' Expr3
   24      | Expr4 '-' Expr3

   25 Expr5: Expr4
   26      | Expr4 SHIFT_LEFT INTEGER
   27      | Expr4 SHIFT_RIGHT INTEGER

   28 Expr6: Expr5
   29      | Expr6 '>' Expr5
   30      | Expr6 GT_EQ Expr5

   31 Expr7: Expr6

   32 Expr8: Expr7

   33 Expr9: Expr8

   34 Expr10: Expr9

   35 Expr11: Expr10

   36 Expr12: Expr11

   37 Expr: Expr12

   38 Param: Expr
   39      | CallStmt

   40 Params: Param
   41       | Params ',' Param

   42 VarStmt: VAR ID ':' TYPE ';'
   43        | VAR ID '=' Expr ';'

   44 Call: ID '(' ')'
   45     | ID '(' Params ')'

   46 CallStmt: Call ';'

   47 AssignStmt: ID '=' Expr ';'

   48 Stmt: VarStmt
   49     | CallStmt
   50     | AssignStmt


Terminals, with rules where they appear

$end (0) 0
'!' (33) 16
'%' (37) 20
'&' (38)
'(' (40) 9 44 45
')' (41) 9 44 45
'*' (42) 21
'+' (43) 23
',' (44) 41
'-' (45) 15 24
'/' (47) 19
':' (58) 42
';' (59) 42 43 46 47
'<' (60)
'=' (61) 43 47
'>' (62) 29
'[' (91) 8
']' (93) 8
'^' (94)
'|' (124)
'~' (126) 17
error (256)
VAR (258) 42 43
ID (259) 3 42 43 44 45 47
TYPE (260) 42
OP1 (261)
OP2 (262)
OP3 (263)
INTEGER (264) 4 26 27
FLOATING (265)
STRING (266) 5
SHIFT_LEFT (267) 26
SHIFT_RIGHT (268) 27
GT_EQ (269) 30
LT_EQ (270)
EQ (271)
NOT_EQ (272)
OR (273)
AND (274)
SUB_SUB (275) 11 12
ADD_ADD (276) 13 14


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
fay (43)
    on left: 1 2, on right: 0 2
Expr0 (44)
    on left: 3 4 5 6, on right: 7
Expr1 (45)
    on left: 7 8 9, on right: 10 11 12 13 14
Expr2 (46)
    on left: 10 11 12 13 14 15 16 17, on right: 15 16 17 18 19 20 21
Expr3 (47)
    on left: 18 19 20 21, on right: 19 20 21 22 23 24
Expr4 (48)
    on left: 22 23 24, on right: 23 24 25 26 27
Expr5 (49)
    on left: 25 26 27, on right: 28 29 30
Expr6 (50)
    on left: 28 29 30, on right: 29 30 31
Expr7 (51)
    on left: 31, on right: 32
Expr8 (52)
    on left: 32, on right: 33
Expr9 (53)
    on left: 33, on right: 34
Expr10 (54)
    on left: 34, on right: 35
Expr11 (55)
    on left: 35, on right: 36
Expr12 (56)
    on left: 36, on right: 37
Expr (57)
    on left: 37, on right: 8 9 38 43 47
Param (58)
    on left: 38 39, on right: 40 41
Params (59)
    on left: 40 41, on right: 41 45
VarStmt (60)
    on left: 42 43, on right: 48
Call (61)
    on left: 44 45, on right: 6 46
CallStmt (62)
    on left: 46, on right: 39 49
AssignStmt (63)
    on left: 47, on right: 50
Stmt (64)
    on left: 48 49 50, on right: 1 2


State 0

    0 $accept: . fay $end

    VAR  shift, and go to state 1
    ID   shift, and go to state 2

    fay         go to state 3
    VarStmt     go to state 4
    Call        go to state 5
    CallStmt    go to state 6
    AssignStmt  go to state 7
    Stmt        go to state 8


State 1

   42 VarStmt: VAR . ID ':' TYPE ';'
   43        | VAR . ID '=' Expr ';'

    ID  shift, and go to state 9


State 2

   44 Call: ID . '(' ')'
   45     | ID . '(' Params ')'
   47 AssignStmt: ID . '=' Expr ';'

    '='  shift, and go to state 10
    '('  shift, and go to state 11


State 3

    0 $accept: fay . $end
    2 fay: fay . Stmt

    $end  shift, and go to state 12
    VAR   shift, and go to state 1
    ID    shift, and go to state 2

    VarStmt     go to state 4
    Call        go to state 5
    CallStmt    go to state 6
    AssignStmt  go to state 7
    Stmt        go to state 13


State 4

   48 Stmt: VarStmt .

    $default  reduce using rule 48 (Stmt)


State 5

   46 CallStmt: Call . ';'

    ';'  shift, and go to state 14


State 6

   49 Stmt: CallStmt .

    $default  reduce using rule 49 (Stmt)


State 7

   50 Stmt: AssignStmt .

    $default  reduce using rule 50 (Stmt)


State 8

    1 fay: Stmt .

    $default  reduce using rule 1 (fay)


State 9

   42 VarStmt: VAR ID . ':' TYPE ';'
   43        | VAR ID . '=' Expr ';'

    '='  shift, and go to state 15
    ':'  shift, and go to state 16


State 10

   47 AssignStmt: ID '=' . Expr ';'

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0   go to state 27
    Expr1   go to state 28
    Expr2   go to state 29
    Expr3   go to state 30
    Expr4   go to state 31
    Expr5   go to state 32
    Expr6   go to state 33
    Expr7   go to state 34
    Expr8   go to state 35
    Expr9   go to state 36
    Expr10  go to state 37
    Expr11  go to state 38
    Expr12  go to state 39
    Expr    go to state 40
    Call    go to state 41


State 11

   44 Call: ID '(' . ')'
   45     | ID '(' . Params ')'

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26
    ')'      shift, and go to state 42

    Expr0     go to state 27
    Expr1     go to state 28
    Expr2     go to state 29
    Expr3     go to state 30
    Expr4     go to state 31
    Expr5     go to state 32
    Expr6     go to state 33
    Expr7     go to state 34
    Expr8     go to state 35
    Expr9     go to state 36
    Expr10    go to state 37
    Expr11    go to state 38
    Expr12    go to state 39
    Expr      go to state 43
    Param     go to state 44
    Params    go to state 45
    Call      go to state 46
    CallStmt  go to state 47


State 12

    0 $accept: fay $end .

    $default  accept


State 13

    2 fay: fay Stmt .

    $default  reduce using rule 2 (fay)


State 14

   46 CallStmt: Call ';' .

    $default  reduce using rule 46 (CallStmt)


State 15

   43 VarStmt: VAR ID '=' . Expr ';'

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0   go to state 27
    Expr1   go to state 28
    Expr2   go to state 29
    Expr3   go to state 30
    Expr4   go to state 31
    Expr5   go to state 32
    Expr6   go to state 33
    Expr7   go to state 34
    Expr8   go to state 35
    Expr9   go to state 36
    Expr10  go to state 37
    Expr11  go to state 38
    Expr12  go to state 39
    Expr    go to state 48
    Call    go to state 41


State 16

   42 VarStmt: VAR ID ':' . TYPE ';'

    TYPE  shift, and go to state 49


State 17

    3 Expr0: ID .
   44 Call: ID . '(' ')'
   45     | ID . '(' Params ')'

    '('  shift, and go to state 11

    $default  reduce using rule 3 (Expr0)


State 18

    4 Expr0: INTEGER .

    $default  reduce using rule 4 (Expr0)


State 19

    5 Expr0: STRING .

    $default  reduce using rule 5 (Expr0)


State 20

   12 Expr2: SUB_SUB . Expr1

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 50
    Call   go to state 41


State 21

   14 Expr2: ADD_ADD . Expr1

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 51
    Call   go to state 41


State 22

   15 Expr2: '-' . Expr2

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 52
    Call   go to state 41


State 23

   16 Expr2: '!' . Expr2

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 53
    Call   go to state 41


State 24

   17 Expr2: '~' . Expr2

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 54
    Call   go to state 41


State 25

    8 Expr1: '[' . Expr ']'

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0   go to state 27
    Expr1   go to state 28
    Expr2   go to state 29
    Expr3   go to state 30
    Expr4   go to state 31
    Expr5   go to state 32
    Expr6   go to state 33
    Expr7   go to state 34
    Expr8   go to state 35
    Expr9   go to state 36
    Expr10  go to state 37
    Expr11  go to state 38
    Expr12  go to state 39
    Expr    go to state 55
    Call    go to state 41


State 26

    9 Expr1: '(' . Expr ')'

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0   go to state 27
    Expr1   go to state 28
    Expr2   go to state 29
    Expr3   go to state 30
    Expr4   go to state 31
    Expr5   go to state 32
    Expr6   go to state 33
    Expr7   go to state 34
    Expr8   go to state 35
    Expr9   go to state 36
    Expr10  go to state 37
    Expr11  go to state 38
    Expr12  go to state 39
    Expr    go to state 56
    Call    go to state 41


State 27

    7 Expr1: Expr0 .

    $default  reduce using rule 7 (Expr1)


State 28

   10 Expr2: Expr1 .
   11      | Expr1 . SUB_SUB
   13      | Expr1 . ADD_ADD

    SUB_SUB  shift, and go to state 57
    ADD_ADD  shift, and go to state 58

    $default  reduce using rule 10 (Expr2)


State 29

   18 Expr3: Expr2 .

    $default  reduce using rule 18 (Expr3)


State 30

   19 Expr3: Expr3 . '/' Expr2
   20      | Expr3 . '%' Expr2
   21      | Expr3 . '*' Expr2
   22 Expr4: Expr3 .

    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 22 (Expr4)


State 31

   23 Expr4: Expr4 . '+' Expr3
   24      | Expr4 . '-' Expr3
   25 Expr5: Expr4 .
   26      | Expr4 . SHIFT_LEFT INTEGER
   27      | Expr4 . SHIFT_RIGHT INTEGER

    SHIFT_LEFT   shift, and go to state 62
    SHIFT_RIGHT  shift, and go to state 63
    '-'          shift, and go to state 64
    '+'          shift, and go to state 65

    $default  reduce using rule 25 (Expr5)


State 32

   28 Expr6: Expr5 .

    $default  reduce using rule 28 (Expr6)


State 33

   29 Expr6: Expr6 . '>' Expr5
   30      | Expr6 . GT_EQ Expr5
   31 Expr7: Expr6 .

    GT_EQ  shift, and go to state 66
    '>'    shift, and go to state 67

    $default  reduce using rule 31 (Expr7)


State 34

   32 Expr8: Expr7 .

    $default  reduce using rule 32 (Expr8)


State 35

   33 Expr9: Expr8 .

    $default  reduce using rule 33 (Expr9)


State 36

   34 Expr10: Expr9 .

    $default  reduce using rule 34 (Expr10)


State 37

   35 Expr11: Expr10 .

    $default  reduce using rule 35 (Expr11)


State 38

   36 Expr12: Expr11 .

    $default  reduce using rule 36 (Expr12)


State 39

   37 Expr: Expr12 .

    $default  reduce using rule 37 (Expr)


State 40

   47 AssignStmt: ID '=' Expr . ';'

    ';'  shift, and go to state 68


State 41

    6 Expr0: Call .

    $default  reduce using rule 6 (Expr0)


State 42

   44 Call: ID '(' ')' .

    $default  reduce using rule 44 (Call)


State 43

   38 Param: Expr .

    $default  reduce using rule 38 (Param)


State 44

   40 Params: Param .

    $default  reduce using rule 40 (Params)


State 45

   41 Params: Params . ',' Param
   45 Call: ID '(' Params . ')'

    ')'  shift, and go to state 69
    ','  shift, and go to state 70


State 46

    6 Expr0: Call .
   46 CallStmt: Call . ';'

    ';'  shift, and go to state 14

    $default  reduce using rule 6 (Expr0)


State 47

   39 Param: CallStmt .

    $default  reduce using rule 39 (Param)


State 48

   43 VarStmt: VAR ID '=' Expr . ';'

    ';'  shift, and go to state 71


State 49

   42 VarStmt: VAR ID ':' TYPE . ';'

    ';'  shift, and go to state 72


State 50

   12 Expr2: SUB_SUB Expr1 .

    $default  reduce using rule 12 (Expr2)


State 51

   14 Expr2: ADD_ADD Expr1 .

    $default  reduce using rule 14 (Expr2)


State 52

   15 Expr2: '-' Expr2 .

    $default  reduce using rule 15 (Expr2)


State 53

   16 Expr2: '!' Expr2 .

    $default  reduce using rule 16 (Expr2)


State 54

   17 Expr2: '~' Expr2 .

    $default  reduce using rule 17 (Expr2)


State 55

    8 Expr1: '[' Expr . ']'

    ']'  shift, and go to state 73


State 56

    9 Expr1: '(' Expr . ')'

    ')'  shift, and go to state 74


State 57

   11 Expr2: Expr1 SUB_SUB .

    $default  reduce using rule 11 (Expr2)


State 58

   13 Expr2: Expr1 ADD_ADD .

    $default  reduce using rule 13 (Expr2)


State 59

   21 Expr3: Expr3 '*' . Expr2

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 75
    Call   go to state 41


State 60

   19 Expr3: Expr3 '/' . Expr2

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 76
    Call   go to state 41


State 61

   20 Expr3: Expr3 '%' . Expr2

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 77
    Call   go to state 41


State 62

   26 Expr5: Expr4 SHIFT_LEFT . INTEGER

    INTEGER  shift, and go to state 78


State 63

   27 Expr5: Expr4 SHIFT_RIGHT . INTEGER

    INTEGER  shift, and go to state 79


State 64

   24 Expr4: Expr4 '-' . Expr3

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 29
    Expr3  go to state 80
    Call   go to state 41


State 65

   23 Expr4: Expr4 '+' . Expr3

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 29
    Expr3  go to state 81
    Call   go to state 41


State 66

   30 Expr6: Expr6 GT_EQ . Expr5

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 29
    Expr3  go to state 30
    Expr4  go to state 31
    Expr5  go to state 82
    Call   go to state 41


State 67

   29 Expr6: Expr6 '>' . Expr5

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0  go to state 27
    Expr1  go to state 28
    Expr2  go to state 29
    Expr3  go to state 30
    Expr4  go to state 31
    Expr5  go to state 83
    Call   go to state 41


State 68

   47 AssignStmt: ID '=' Expr ';' .

    $default  reduce using rule 47 (AssignStmt)


State 69

   45 Call: ID '(' Params ')' .

    $default  reduce using rule 45 (Call)


State 70

   41 Params: Params ',' . Param

    ID       shift, and go to state 17
    INTEGER  shift, and go to state 18
    STRING   shift, and go to state 19
    SUB_SUB  shift, and go to state 20
    ADD_ADD  shift, and go to state 21
    '-'      shift, and go to state 22
    '!'      shift, and go to state 23
    '~'      shift, and go to state 24
    '['      shift, and go to state 25
    '('      shift, and go to state 26

    Expr0     go to state 27
    Expr1     go to state 28
    Expr2     go to state 29
    Expr3     go to state 30
    Expr4     go to state 31
    Expr5     go to state 32
    Expr6     go to state 33
    Expr7     go to state 34
    Expr8     go to state 35
    Expr9     go to state 36
    Expr10    go to state 37
    Expr11    go to state 38
    Expr12    go to state 39
    Expr      go to state 43
    Param     go to state 84
    Call      go to state 46
    CallStmt  go to state 47


State 71

   43 VarStmt: VAR ID '=' Expr ';' .

    $default  reduce using rule 43 (VarStmt)


State 72

   42 VarStmt: VAR ID ':' TYPE ';' .

    $default  reduce using rule 42 (VarStmt)


State 73

    8 Expr1: '[' Expr ']' .

    $default  reduce using rule 8 (Expr1)


State 74

    9 Expr1: '(' Expr ')' .

    $default  reduce using rule 9 (Expr1)


State 75

   21 Expr3: Expr3 '*' Expr2 .

    $default  reduce using rule 21 (Expr3)


State 76

   19 Expr3: Expr3 '/' Expr2 .

    $default  reduce using rule 19 (Expr3)


State 77

   20 Expr3: Expr3 '%' Expr2 .

    $default  reduce using rule 20 (Expr3)


State 78

   26 Expr5: Expr4 SHIFT_LEFT INTEGER .

    $default  reduce using rule 26 (Expr5)


State 79

   27 Expr5: Expr4 SHIFT_RIGHT INTEGER .

    $default  reduce using rule 27 (Expr5)


State 80

   19 Expr3: Expr3 . '/' Expr2
   20      | Expr3 . '%' Expr2
   21      | Expr3 . '*' Expr2
   24 Expr4: Expr4 '-' Expr3 .

    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 24 (Expr4)


State 81

   19 Expr3: Expr3 . '/' Expr2
   20      | Expr3 . '%' Expr2
   21      | Expr3 . '*' Expr2
   23 Expr4: Expr4 '+' Expr3 .

    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 23 (Expr4)


State 82

   30 Expr6: Expr6 GT_EQ Expr5 .

    $default  reduce using rule 30 (Expr6)


State 83

   29 Expr6: Expr6 '>' Expr5 .

    $default  reduce using rule 29 (Expr6)


State 84

   41 Params: Params ',' Param .

    $default  reduce using rule 41 (Params)
